// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render correctly with caption size and color black 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-400 text-50"
  >
    Click me - 
    caption
  </a>
</div>
`;

exports[`Link should render correctly with caption size and color white 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-50 hover:underline hover:cursor-pointer active:underline p-400 text-50"
  >
    Click me - 
    caption
  </a>
</div>
`;

exports[`Link should render correctly with disabled false 1`] = `
<a
  class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-400 text-50"
>
  Click me disabled
</a>
`;

exports[`Link should render correctly with disabled true 1`] = `
<a
  class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-400 text-50 opacity-300 cursor-none pointer-events-none"
>
  Click me disabled
</a>
`;

exports[`Link should render correctly with lg size and color black 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-800 text-100"
  >
    Click me - 
    lg
  </a>
</div>
`;

exports[`Link should render correctly with lg size and color white 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-50 hover:underline hover:cursor-pointer active:underline p-800 text-100"
  >
    Click me - 
    lg
  </a>
</div>
`;

exports[`Link should render correctly with md size and color black 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-600 text-75"
  >
    Click me - 
    md
  </a>
</div>
`;

exports[`Link should render correctly with md size and color white 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-50 hover:underline hover:cursor-pointer active:underline p-600 text-75"
  >
    Click me - 
    md
  </a>
</div>
`;

exports[`Link should render correctly with sm size and color black 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-400 text-50"
  >
    Click me - 
    sm
  </a>
</div>
`;

exports[`Link should render correctly with sm size and color white 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-50 hover:underline hover:cursor-pointer active:underline p-400 text-50"
  >
    Click me - 
    sm
  </a>
</div>
`;

exports[`Link should render correctly with xl size and color black 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-1400 hover:underline hover:cursor-pointer active:underline p-1200 text-300"
  >
    Click me - 
    xl
  </a>
</div>
`;

exports[`Link should render correctly with xl size and color white 1`] = `
<div>
  <a
    class="inline-flex items-center gap-400 group text-solid-slate-50 hover:underline hover:cursor-pointer active:underline p-1200 text-300"
  >
    Click me - 
    xl
  </a>
</div>
`;
